--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c1e6c70-e3e4-4b09-ad17-8143993c2dc8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -184,52 +184,213 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6afb550-c1ca-4d86-9e4b-535968029f0c",
+   "metadata": {},
+   "source": [
+    "# Broadcasting and Vectorized operations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d644c8a9-34bb-4d15-b1c7-d690136efbff",
+   "execution_count": 3,
+   "id": "047bbc86-ee65-4da8-9352-3dcbdbe093c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.arange(4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "33835955-02fc-4eb4-b2aa-ca6290262cd0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Maybe you meant '==' or ':=' instead of '='? (3489715020.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[19], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    b = np.array[[1,2,2], dytype=int32]\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Maybe you meant '==' or ':=' instead of '='?\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "b = np.a"
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2b3e44e9-b0a2-4d4c-8c9d-b977980b5677",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2c6e9033-72c1-4237-a1c6-c524c599de56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 10, 20, 30])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bb7b630a-d94e-47cb-bed6-b47d31cfe4ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5446c571-f47a-49e1-a776-de587bdb7e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "79a867bc-baa1-4cc2-a6b5-e2309293df7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 11, 12, 13])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54842e72-e5b3-4aef-93c4-cc715d77d998",
+   "metadata": {},
+   "source": [
+    "# Numpy Boolean Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4f27ee6c-fb80-402f-b0f7-f12235609009",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 13])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[[True, False, False, True]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8d343f95-5dc0-41cc-aa77-06577d85f6f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a >= 11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c2732a25-2c50-4355-97ca-6a6cd9496b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a > 12"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047bbc86-ee65-4da8-9352-3dcbdbe093c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33835955-02fc-4eb4-b2aa-ca6290262cd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b3e44e9-b0a2-4d4c-8c9d-b977980b5677",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c6e9033-72c1-4237-a1c6-c524c599de56",
+   "id": "90b02651-5bd2-43b3-bcbd-cd22374a6d8b",
    "metadata": {},
    "outputs": [],
    "source": []
